--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
+    "dockerode": "^4.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
