--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "hamburger-react": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
