--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.5.2",
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.4",
     "xterm": "^5.3.0"
   },
