--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 # .env
 VITE_BACKEND_URL= http://localhost:3000
 VITE_BACKEND_LOGIN = http://localhost:3000/user/logIn
+VITE_BACKEND_SIGNUP = http://localhost:3000/user/register
