--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-expire": "^0.0.2",
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
     "socket.io-client": "^4.8.1",
