--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.5.2",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-expire": "^0.0.2",
+    "redux-persist-transform-expire-in": "^1.1.3",
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
     "socket.io-client": "^4.8.1",
