--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.14",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.4",
     "@uiw/react-textarea-code-editor": "^3.1.1",
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
     "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.516.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +33,7 @@
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.4",
     "xterm": "^5.3.0"
   },
@@ -42,6 +47,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tw-animate-css": "^1.3.4",
     "vite": "^6.2.0"
   }
 }
