--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "hamburger-react": "^2.5.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
