--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "hamburger-react": "^2.5.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -38,6 +39,7 @@
     "rehype-prism-plus": "^2.0.1",
     "rehype-rewrite": "^4.0.2",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.4",
     "xterm": "^5.3.0"
