--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "node-pty": "^1.0.0",
     "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   }
