--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "20": "^3.1.9",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie": "^1.0.2",
