--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "hamburger-react": "^2.5.2",
+    "highlight.js": "^11.11.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "next-themes": "^0.4.6",
