--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,6 @@
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "hamburger-react": "^2.5.2",
-    "highlight.js": "^11.11.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "next-themes": "^0.4.6",
@@ -43,6 +42,7 @@
     "rehype-rewrite": "^4.0.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.4",
     "vaul": "^1.1.2",
